# YMusicBot_for_Alis

./: .gitignore  README.md  config.py  env  main.py  pyproject.toml  requirements.txt
docs/: errors.md  keybords.md  todo_per_date.md  не чёткий поиск.md
src/: __init__.py  utils.py
src/api/: YMusic.py
src/db/: DataBase.py  __init__.py  test.py
src/handlers/: __init__.py  admin.py  keyboards.py  users.py
