[tool.poetry]
name = "ymusicbot-for-alis"
version = "0.1.0"
description = ""
authors = ["EgorGorshen <egorgorshenckov@yandex.ru>"]
readme = "README.md"
packages = [{include = "ymusicbot_for_alis"}]

[tool.poetry.dependencies]
python = "^3.11"
multidict = "5.1.0"
aiohttp = "3.9.0b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
